exports[`no-conditional-in-test > invalid(1): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", t => {\n\tsetup(a ? 1 : 2);\n}); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("x", t => {
  3 | 	setup(a ? 1 : 2);
  4 | });

`;

exports[`no-conditional-in-test > invalid(1): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", t => {\n\tsetup(a ? 1 : 2);\n}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("x", t => {
> 3 | 	setup(a ? 1 : 2);
    | 	      ^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.
  4 | });

`;

exports[`no-conditional-in-test > invalid(10): import {test, describe, beforeEach} from 'node:test';\ntest(\"a\", async t => { await t.test(\"b\", () => { const v = x ? 1 : 2; }); }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("a", async t => { await t.test("b", () => { const v = x ? 1 : 2; }); });

`;

exports[`no-conditional-in-test > invalid(10): import {test, describe, beforeEach} from 'node:test';\ntest(\"a\", async t => { await t.test(\"b\", () => { const v = x ? 1 : 2; }); }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | test("a", async t => { await t.test("b", () => { const v = x ? 1 : 2; }); });
    |                                                            ^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(11): import test from 'node:test';\ntest({name: 'x', fn() { if (a) { f(); } }}); 1`] = `

  1 | import test from 'node:test';
  2 | test({name: 'x', fn() { if (a) { f(); } }});

`;

exports[`no-conditional-in-test > invalid(11): import test from 'node:test';\ntest({name: 'x', fn() { if (a) { f(); } }}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test({name: 'x', fn() { if (a) { f(); } }});
    |                         ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(12): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", () => { if (a) { assert.ok(b); } }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("x", () => { if (a) { assert.ok(b); } });

`;

exports[`no-conditional-in-test > invalid(12): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", () => { if (a) { assert.ok(b); } }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | test("x", () => { if (a) { assert.ok(b); } });
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(13): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", () => { if (a) { f(); } else { g(); } }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("x", () => { if (a) { f(); } else { g(); } });

`;

exports[`no-conditional-in-test > invalid(13): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", () => { if (a) { f(); } else { g(); } }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | test("x", () => { if (a) { f(); } else { g(); } });
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(14): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", () => { const value = a ? 1 : 2; }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("x", () => { const value = a ? 1 : 2; });

`;

exports[`no-conditional-in-test > invalid(14): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", () => { const value = a ? 1 : 2; }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | test("x", () => { const value = a ? 1 : 2; });
    |                                 ^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(15): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", () => { switch (a) { case 1: break; } }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("x", () => { switch (a) { case 1: break; } });

`;

exports[`no-conditional-in-test > invalid(15): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", () => { switch (a) { case 1: break; } }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | test("x", () => { switch (a) { case 1: break; } });
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(16): import {test, describe, beforeEach} from 'node:test';\nbeforeEach(() => { if (a) { setup(); } }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | beforeEach(() => { if (a) { setup(); } });

`;

exports[`no-conditional-in-test > invalid(16): import {test, describe, beforeEach} from 'node:test';\nbeforeEach(() => { if (a) { setup(); } }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | beforeEach(() => { if (a) { setup(); } });
    |                    ^^^^^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(17): import {test, describe, beforeEach} from 'node:test';\nbeforeEach(() => { if (a) { setup(); } }, {timeout: 1000}); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | beforeEach(() => { if (a) { setup(); } }, {timeout: 1000});

`;

exports[`no-conditional-in-test > invalid(17): import {test, describe, beforeEach} from 'node:test';\nbeforeEach(() => { if (a) { setup(); } }, {timeout: 1000}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | beforeEach(() => { if (a) { setup(); } }, {timeout: 1000});
    |                    ^^^^^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(18): import {before} from 'node:test';\nbefore(() => { if (a) { f(); } }, {timeout: 1}); 1`] = `

  1 | import {before} from 'node:test';
  2 | before(() => { if (a) { f(); } }, {timeout: 1});

`;

exports[`no-conditional-in-test > invalid(18): import {before} from 'node:test';\nbefore(() => { if (a) { f(); } }, {timeout: 1}); 2`] = `

Message:
  1 | import {before} from 'node:test';
> 2 | before(() => { if (a) { f(); } }, {timeout: 1});
    |                ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(19): import {after} from 'node:test';\nafter(() => { if (a) { f(); } }, {timeout: 1}); 1`] = `

  1 | import {after} from 'node:test';
  2 | after(() => { if (a) { f(); } }, {timeout: 1});

`;

exports[`no-conditional-in-test > invalid(19): import {after} from 'node:test';\nafter(() => { if (a) { f(); } }, {timeout: 1}); 2`] = `

Message:
  1 | import {after} from 'node:test';
> 2 | after(() => { if (a) { f(); } }, {timeout: 1});
    |               ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(2): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", t => {\n\tconsole.log(a ? 1 : 2);\n}); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("x", t => {
  3 | 	console.log(a ? 1 : 2);
  4 | });

`;

exports[`no-conditional-in-test > invalid(2): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", t => {\n\tconsole.log(a ? 1 : 2);\n}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("x", t => {
> 3 | 	console.log(a ? 1 : 2);
    | 	            ^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.
  4 | });

`;

exports[`no-conditional-in-test > invalid(20): import {afterEach} from 'node:test';\nafterEach(() => { if (a) { f(); } }, {timeout: 1}); 1`] = `

  1 | import {afterEach} from 'node:test';
  2 | afterEach(() => { if (a) { f(); } }, {timeout: 1});

`;

exports[`no-conditional-in-test > invalid(20): import {afterEach} from 'node:test';\nafterEach(() => { if (a) { f(); } }, {timeout: 1}); 2`] = `

Message:
  1 | import {afterEach} from 'node:test';
> 2 | afterEach(() => { if (a) { f(); } }, {timeout: 1});
    |                   ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(21): import test from 'node:test';\ntest.beforeEach(() => { if (a) { f(); } }, {timeout: 1}); 1`] = `

  1 | import test from 'node:test';
  2 | test.beforeEach(() => { if (a) { f(); } }, {timeout: 1});

`;

exports[`no-conditional-in-test > invalid(21): import test from 'node:test';\ntest.beforeEach(() => { if (a) { f(); } }, {timeout: 1}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test.beforeEach(() => { if (a) { f(); } }, {timeout: 1});
    |                         ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(22): import {test, describe, beforeEach} from 'node:test';\nbeforeEach(() => { const value = a ? 1 : 2; }, {timeout: 1000}); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | beforeEach(() => { const value = a ? 1 : 2; }, {timeout: 1000});

`;

exports[`no-conditional-in-test > invalid(22): import {test, describe, beforeEach} from 'node:test';\nbeforeEach(() => { const value = a ? 1 : 2; }, {timeout: 1000}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | beforeEach(() => { const value = a ? 1 : 2; }, {timeout: 1000});
    |                                  ^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(23): import {test, describe, beforeEach} from 'node:test';\nbeforeEach(() => { switch (a) { case 1: break; } }, {timeout: 1000}); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | beforeEach(() => { switch (a) { case 1: break; } }, {timeout: 1000});

`;

exports[`no-conditional-in-test > invalid(23): import {test, describe, beforeEach} from 'node:test';\nbeforeEach(() => { switch (a) { case 1: break; } }, {timeout: 1000}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | beforeEach(() => { switch (a) { case 1: break; } }, {timeout: 1000});
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(24): import {test, describe, beforeEach} from 'node:test';\ndescribe(\"s\", () => { test(\"x\", () => { if (a) { f(); } }); }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | describe("s", () => { test("x", () => { if (a) { f(); } }); });

`;

exports[`no-conditional-in-test > invalid(24): import {test, describe, beforeEach} from 'node:test';\ndescribe(\"s\", () => { test(\"x\", () => { if (a) { f(); } }); }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | describe("s", () => { test("x", () => { if (a) { f(); } }); });
    |                                         ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(25): import {it} from 'node:test';\nit(\"x\", () => { if (a) { f(); } }); 1`] = `

  1 | import {it} from 'node:test';
  2 | it("x", () => { if (a) { f(); } });

`;

exports[`no-conditional-in-test > invalid(25): import {it} from 'node:test';\nit(\"x\", () => { if (a) { f(); } }); 2`] = `

Message:
  1 | import {it} from 'node:test';
> 2 | it("x", () => { if (a) { f(); } });
    |                 ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(26): import * as nodeTest from 'node:test';\nnodeTest.test(\"x\", () => { if (a) { f(); } }); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test("x", () => { if (a) { f(); } });

`;

exports[`no-conditional-in-test > invalid(26): import * as nodeTest from 'node:test';\nnodeTest.test(\"x\", () => { if (a) { f(); } }); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.test("x", () => { if (a) { f(); } });
    |                            ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(27): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", () => { if (a as boolean) { f(); } }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("x", () => { if (a as boolean) { f(); } });

`;

exports[`no-conditional-in-test > invalid(27): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", () => { if (a as boolean) { f(); } }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | test("x", () => { if (a as boolean) { f(); } });
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(28): import {test, describe, beforeEach} from 'node:test';\ntest('o', t => { t.beforeEach(() => { if (a) { f(); } }); }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test('o', t => { t.beforeEach(() => { if (a) { f(); } }); });

`;

exports[`no-conditional-in-test > invalid(28): import {test, describe, beforeEach} from 'node:test';\ntest('o', t => { t.beforeEach(() => { if (a) { f(); } }); }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | test('o', t => { t.beforeEach(() => { if (a) { f(); } }); });
    |                                       ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(29): import {test, describe, beforeEach} from 'node:test';\ntest('o', t => { t.before(() => { if (a) { f(); } }); }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test('o', t => { t.before(() => { if (a) { f(); } }); });

`;

exports[`no-conditional-in-test > invalid(29): import {test, describe, beforeEach} from 'node:test';\ntest('o', t => { t.before(() => { if (a) { f(); } }); }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | test('o', t => { t.before(() => { if (a) { f(); } }); });
    |                                   ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(3): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", t => {\n\tassert.ok(a ? 1 : 2);\n}); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("x", t => {
  3 | 	assert.ok(a ? 1 : 2);
  4 | });

`;

exports[`no-conditional-in-test > invalid(3): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", t => {\n\tassert.ok(a ? 1 : 2);\n}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("x", t => {
> 3 | 	assert.ok(a ? 1 : 2);
    | 	          ^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.
  4 | });

`;

exports[`no-conditional-in-test > invalid(30): import {test, describe, beforeEach} from 'node:test';\nbeforeEach(function live() { if (a) { f(); } }, function dead() { g(); }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | beforeEach(function live() { if (a) { f(); } }, function dead() { g(); });

`;

exports[`no-conditional-in-test > invalid(30): import {test, describe, beforeEach} from 'node:test';\nbeforeEach(function live() { if (a) { f(); } }, function dead() { g(); }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | beforeEach(function live() { if (a) { f(); } }, function dead() { g(); });
    |                              ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(31): import {test, describe, beforeEach} from 'node:test';\ntest(\"a\", function live() { if (a) { f(); } }, function dead() { g(); }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("a", function live() { if (a) { f(); } }, function dead() { g(); });

`;

exports[`no-conditional-in-test > invalid(31): import {test, describe, beforeEach} from 'node:test';\ntest(\"a\", function live() { if (a) { f(); } }, function dead() { g(); }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | test("a", function live() { if (a) { f(); } }, function dead() { g(); });
    |                             ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(32): import {test, getTestContext} from 'node:test';\ntest('p', t => { getTestContext().beforeEach(() => { if (a) { f(); } }); }); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test('p', t => { getTestContext().beforeEach(() => { if (a) { f(); } }); });

`;

exports[`no-conditional-in-test > invalid(32): import {test, getTestContext} from 'node:test';\ntest('p', t => { getTestContext().beforeEach(() => { if (a) { f(); } }); }); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
> 2 | test('p', t => { getTestContext().beforeEach(() => { if (a) { f(); } }); });
    |                                                      ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(33): import {test, describe, beforeEach} from 'node:test';\nfunction body() {\n\tif (x) {\n\t\tf();\n\t}\n}\ntest(\"x\", body); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | function body() {
  3 | 	if (x) {
  4 | 		f();
  5 | 	}
  6 | }
  7 | test("x", body);

`;

exports[`no-conditional-in-test > invalid(33): import {test, describe, beforeEach} from 'node:test';\nfunction body() {\n\tif (x) {\n\t\tf();\n\t}\n}\ntest(\"x\", body); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
  2 | function body() {
> 3 | 	if (x) {
    | 	^^^^^^^^
> 4 | 		f();
    | ^^^^^^
> 5 | 	}
    | ^^ Avoid conditional logic in a test; a test should run the same way every time.
  6 | }
  7 | test("x", body);

`;

exports[`no-conditional-in-test > invalid(34): import {test, describe, beforeEach} from 'node:test';\nconst body = () => {\n\tif (x) {\n\t\tf();\n\t}\n};\ntest(\"x\", body); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | const body = () => {
  3 | 	if (x) {
  4 | 		f();
  5 | 	}
  6 | };
  7 | test("x", body);

`;

exports[`no-conditional-in-test > invalid(34): import {test, describe, beforeEach} from 'node:test';\nconst body = () => {\n\tif (x) {\n\t\tf();\n\t}\n};\ntest(\"x\", body); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
  2 | const body = () => {
> 3 | 	if (x) {
    | 	^^^^^^^^
> 4 | 		f();
    | ^^^^^^
> 5 | 	}
    | ^^ Avoid conditional logic in a test; a test should run the same way every time.
  6 | };
  7 | test("x", body);

`;

exports[`no-conditional-in-test > invalid(35): import {before} from 'node:test';\nbefore(setup);\nfunction setup() {\n\tif (x) {\n\t\tf();\n\t}\n} 1`] = `

  1 | import {before} from 'node:test';
  2 | before(setup);
  3 | function setup() {
  4 | 	if (x) {
  5 | 		f();
  6 | 	}
  7 | }

`;

exports[`no-conditional-in-test > invalid(35): import {before} from 'node:test';\nbefore(setup);\nfunction setup() {\n\tif (x) {\n\t\tf();\n\t}\n} 2`] = `

Message:
  1 | import {before} from 'node:test';
  2 | before(setup);
  3 | function setup() {
> 4 | 	if (x) {
    | 	^^^^^^^^
> 5 | 		f();
    | ^^^^^^
> 6 | 	}
    | ^^ Avoid conditional logic in a test; a test should run the same way every time.
  7 | }

`;

exports[`no-conditional-in-test > invalid(36): // A body the call names out of line is the subtest's body\nimport {test} from 'node:test';\nconst body = () => {\n\tif (x) {}\n};\ntest('a', t => {\n\tt.test('sub', body);\n}); 1`] = `

  1 | // A body the call names out of line is the subtest's body
  2 | import {test} from 'node:test';
  3 | const body = () => {
  4 | 	if (x) {}
  5 | };
  6 | test('a', t => {
  7 | 	t.test('sub', body);
  8 | });

`;

exports[`no-conditional-in-test > invalid(36): // A body the call names out of line is the subtest's body\nimport {test} from 'node:test';\nconst body = () => {\n\tif (x) {}\n};\ntest('a', t => {\n\tt.test('sub', body);\n}); 2`] = `

Message:
  1 | // A body the call names out of line is the subtest's body
  2 | import {test} from 'node:test';
  3 | const body = () => {
> 4 | 	if (x) {}
    | 	^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.
  5 | };
  6 | test('a', t => {
  7 | 	t.test('sub', body);
  8 | });

`;

exports[`no-conditional-in-test > invalid(4): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", t => {\n\tsetup(flag ? work() : other());\n}); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("x", t => {
  3 | 	setup(flag ? work() : other());
  4 | });

`;

exports[`no-conditional-in-test > invalid(4): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", t => {\n\tsetup(flag ? work() : other());\n}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("x", t => {
> 3 | 	setup(flag ? work() : other());
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.
  4 | });

`;

exports[`no-conditional-in-test > invalid(5): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", t => {\n\tclient.test(ready ? 1 : 2);\n}); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("x", t => {
  3 | 	client.test(ready ? 1 : 2);
  4 | });

`;

exports[`no-conditional-in-test > invalid(5): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", t => {\n\tclient.test(ready ? 1 : 2);\n}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("x", t => {
> 3 | 	client.test(ready ? 1 : 2);
    | 	            ^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.
  4 | });

`;

exports[`no-conditional-in-test > invalid(6): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", t => {\n\tassert.test(ready ? 1 : 2);\n}); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("x", t => {
  3 | 	assert.test(ready ? 1 : 2);
  4 | });

`;

exports[`no-conditional-in-test > invalid(6): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", t => {\n\tassert.test(ready ? 1 : 2);\n}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("x", t => {
> 3 | 	assert.test(ready ? 1 : 2);
    | 	            ^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.
  4 | });

`;

exports[`no-conditional-in-test > invalid(7): import test from 'node:test';\ntest(\"a\", {fn() { if (c) { f(); } }}, {fn() {}}); 1`] = `

  1 | import test from 'node:test';
  2 | test("a", {fn() { if (c) { f(); } }}, {fn() {}});

`;

exports[`no-conditional-in-test > invalid(7): import test from 'node:test';\ntest(\"a\", {fn() { if (c) { f(); } }}, {fn() {}}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("a", {fn() { if (c) { f(); } }}, {fn() {}});
    |                   ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(8): import {test, describe, beforeEach} from 'node:test';\ntest(\"a\", async t => { await t.test(\"b\", () => { if (x) { f(); } }); }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("a", async t => { await t.test("b", () => { if (x) { f(); } }); });

`;

exports[`no-conditional-in-test > invalid(8): import {test, describe, beforeEach} from 'node:test';\ntest(\"a\", async t => { await t.test(\"b\", () => { if (x) { f(); } }); }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | test("a", async t => { await t.test("b", () => { if (x) { f(); } }); });
    |                                                  ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(9): import {test, describe, beforeEach} from 'node:test';\ntest(\"a\", async t => { await t.test.only(\"b\", () => { if (x) { f(); } }); }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("a", async t => { await t.test.only("b", () => { if (x) { f(); } }); });

`;

exports[`no-conditional-in-test > invalid(9): import {test, describe, beforeEach} from 'node:test';\ntest(\"a\", async t => { await t.test.only(\"b\", () => { if (x) { f(); } }); }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | test("a", async t => { await t.test.only("b", () => { if (x) { f(); } }); });
    |                                                       ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;
